--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.6",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
