--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@remixicon/react": "^4.2.0",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
     "json-server": "^1.0.0-beta.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -24,7 +26,8 @@
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.6",
     "socket.io-client": "^4.7.5",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
